infrastructure/clusters/home/apps/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imdb-clone
---
apiVersion: v1
kind: Namespace
metadata:
  name: databases
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform
