infrastructure/clusters/home/apps/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdb-clone-elasticsearch
  namespace: databases
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  selector:
    elasticsearch.k8s.elastic.co/cluster-name: imdb-clone-elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
