infrastructure/clusters/home/apps/rustfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdb-clone-rustfs
  namespace: databases
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rustfs
    app.kubernetes.io/instance: imdb-clone-rustfs
  ports:
    - name: endpoint
      port: 9000
      targetPort: 9000
